<resources>
    <string name="app_name">BDF</string>
    <string name="i_am_a_donor">I am a Donor</string>
    <string name="i_am_a_recipient">I am a Recipient</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="city">City</string>
    <string name="blood_group">Blood Group</string>
    <string name="availability">Availability</string>
    <string name="submit">Submit</string>
    <string name="search">Search</string>
    <string name="donor_registered_successfully">Details submitted, thank you</string>
    <string name="select_blood_group">Select Blood Group</string>
    <string name="error_registration">Error during registration</string>
    <string name="local_area">Local Area</string>
    <string name="error_fetching_donors">Error fetching donors</string>
</resources>
